--- a/Module 11/style.css
+++ b/Module 11/style.css
@@ -1,15 +1,19 @@
 .slider-paragraph{
-    background-color: aquamarine;
-    padding: 20px; 
-    color: antiquewhite;
- }
- span{
-    margin-top: 50px;
-    background-color: blue;
-    color: aliceblue;
- }
- .bg-img{background: url(https://st4.depositphotos.com/14431644/22076/i/450/depositphotos_220767694-stock-photo-handwriting-text-writing-example-concept.jpg);
- }
+   background-color: black;
+   padding: 50px; 
+   color: antiquewhite;
+    border: 5px solid green;}
+
+span{
+   margin-top: 50px;
+   background-color: red;
+   color: aliceblue;
+}
+.bg-img{background: url(https://st4.depositphotos.com/14431644/22076/i/450/depositphotos_220767694-stock-photo-handwriting-text-writing-example-concept.jpg);
+}
 .border{border-width: 2px;
 border-style: solid;
+}
+.border-solid{
+border: 5px solid rebeccapurple;
 }
